Nuevos endpoints para usar desde el product-management
