# src/main/resources/swagger.yaml
@@ -42,6 +42,25 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/UnexpectedError'
+  '/products/{storeId}/stores':
+    parameters:
+      - $ref: '#/components/parameters/storeId'
+    get:
+      summary: Get a product List by StoreId
+      operationId: getProductByStoreId
+      responses:
+        '200':
+          $ref: '#/components/responses/ListProducts'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
   '/products/{productId}':
     parameters:
       - $ref: '#/components/parameters/productId'
@@ -121,6 +140,25 @@ paths:
     get:
       summary: Get a list of categories
       operationId: getCategories
+      responses:
+        '200':
+          $ref: '#/components/responses/ListCategories'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
+  '/categories/{storeId}/stores':
+    parameters:
+      - $ref: '#/components/parameters/storeId'
+    get:
+      summary: Get a category List by StoreId
+      operationId: getCategoriesByStoreId
       responses:
         '200':
           $ref: '#/components/responses/ListCategories'
@@ -216,6 +254,12 @@ components:
       required: true
       schema:
         $ref: '#/components/schemas/categoryId'
+    storeId:
+      name: storeId
+      in: path
+      required: true
+      schema:
+        $ref: '#/components/schemas/storeId'
   responses:
     ListProducts:
       description: OK.
@@ -425,6 +469,14 @@ components:
       maximum: 999999999999
       example: 1
     categoryId:
+      title: example
+      description: example
+      type: integer
+      format: int64
+      minimum: 1
+      maximum: 999999999999
+      example: 1
+    storeId:
       title: example
       description: example
       type: integer
